kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pytorch-quantization-demo
  labels:
    app: pytorch-quantization-demo
spec:
  selector:
    app: pytorch-quantization-demo
  ports:
    - name: http
      port: 8000
      targetPort: http
